# actix-seaorm-test

./: .env  Cargo.toml
migration/src/: lib.rs  m20241019_131112_craete_table_todos.rs
src/: main.rs
src/entity/: todo.rs
src/pkg/: logger.rs
