[package]
name = "actix-seaorm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.0.0-rc.5", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4"
chrono = "0.4"
